Revision history for Perl extension Regexp::Parserton.

1.03  2018-02-12T16:36:00
	- Remove 'use 5.10.1;' which reappeared after I did 'get reset --hard'.
	- Update docs re stringification and versions of Perl supported.

1.02  2018-02-12T13:16:00
	- Adjust minimum Perl version in Makefile.PL from 5.10.1 to 5.14.0, which is when regexp
		stringification changed significantly.
	- Clean up some test scripts, which were not maintaining the internal test count used by my
		local program test.marpa.pl (which tests all my modules which use Marpa).
	- Add a couple of missing alternatives to extended regexps of type '3: (?:pattern) etc',
		specifically under the definition of colon_thingy.

1.01  2018-02-08T12:00:00
	- Adjust minimum Perl version in Makefile.PL from 5.20.2 to 5.10.1, to match Marpa::R2.
	- Ensure same version of Perl is 'use'd in all *.pl and *.t files.
	- Add link in docs to CPAN Testers fast-matrix of test results.

1.00  2018-02-07T12:00:00
	- More work on the sample code and the docs. Update the version # to 1.00.

0.90  2018-02-04T14:13:12
	- Many, many changes to the BNF. Various updates to the docs. Known failures to parser empty
		regexps have been moved to t/empty.re.t.

0.81  2018-01-15T10:08:00
	- Add, document and test the new find($string) function.
	- Expand BNF.

0.80  2018-01-14T15:08:00
	- Expand the BNF to cover all the major items in http://perldoc.perl.org/perlre.html.
	- Add a brief tutorial to the FAQ.
	- Running 'prove -lv t' currently passes 955 tests.

0.52  2018-01-05T10:59:00
	- Adopt new repo structure. For details, see
		http://savage.net.au/Ron/html/My.Workflow.for.Building.Distros.html.
		This includes switching from the Artistic V 1.0 licence to the Perl licence.
	- Clean up code.
	- Expand bnf, so t/test.t, scripts/test.pl and scripts/synopsis.pl work with new bnf.
	- Add pre-req Perl V 5.20.2 to avoid regexp syntax issues until I'm ready.

0.51  2016-04-01T13:01:00
	- Fix pre-reqs.