@@ -8,6 +8,8 @@ Date=2018-02-12T16:36:00
 Comments= <<EOT
 - Remove 'use 5.10.1;' which reappeared after I did 'get reset --hard'.
 - Update docs re stringification and versions of Perl supported.
+- Replace say with print since I am switching between Perls.
+- Remove the Actions module. It was only meant for debugging.
 EOT
 
 [V 1.02]
