@@ -63,16 +63,16 @@ for my $test (@test)
 
 			$stats{success}++ if ($outcome == 0);
 
-			#say "Case: $$test{item}. got: $got. expected: $expected. outcome: $outcome (0 is success). ";
+			#print "Case: $$test{item}. got: $got. expected: $expected. outcome: $outcome (0 is success). \n";
 		}
 		else
 		{
-			#say "Case $$test{item} failed to return 0 from parse(). ";
+			#print "Case $$test{item} failed to return 0 from parse(). \n";
 		}
 	}
 	catch
 	{
-		#say map{"# $_\n"} split(/\n/, $_);
+		#print map{"# $_\n"} split(/\n/, $_);
 
 		ok(1 == 1, "As expected, unable to parse qr/$$test{re}/"); $count++;
 	};
@@ -82,9 +82,8 @@ for my $test (@test)
 	$parser -> reset;
 }
 
-#print "Statistics: ";
-#print "$_: $stats{$_}. " for (sort keys %stats);
-#say '';
+#print "Statistics: \n";
+#print "$_: $stats{$_}. \n" for (sort keys %stats);
 
 print "# Internal test count: $count\n";
 
