@@ -3,6 +3,8 @@ Revision history for Perl extension Regexp::Parserton.
 1.03  2018-02-12T16:36:00
 	- Remove 'use 5.10.1;' which reappeared after I did 'get reset --hard'.
 	- Update docs re stringification and versions of Perl supported.
+	- Replace say with print since I am switching between Perls.
+	- Remove the Actions module. It was only meant for debugging.
 
 1.02  2018-02-12T13:16:00
 	- Adjust minimum Perl version in Makefile.PL from 5.10.1 to 5.14.0, which is when regexp
